--- a/vBergaaaBot/vBergaaaBot.csproj
+++ b/vBergaaaBot/vBergaaaBot.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{50579668-A3FB-43F4-B88C-05995BE4C8CC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Bot</RootNamespace>
-    <AssemblyName>Bot</AssemblyName>
+    <RootNamespace>vBergaaaBot</RootNamespace>
+    <AssemblyName>vBergaaaBot</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abilities.cs" />
+    <Compile Include="Helpers\BotHelper.cs" />
     <Compile Include="Builds\Build.cs" />
     <Compile Include="Builds\BuildOrderStep.cs" />
     <Compile Include="Builds\ZergBuilds\Roach_All_In.cs" />
@@ -57,6 +58,9 @@
     <Compile Include="Entity\InternalData.cs" />
     <Compile Include="Entity\MineralField.cs" />
     <Compile Include="Entity\VespeneGeyser.cs" />
+    <Compile Include="Helpers\MorphHelper.cs" />
+    <Compile Include="Helpers\TrainHelper.cs" />
+    <Compile Include="Helpers\UpgradeHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Entity\MapInformation.cs" />
     <Compile Include="Program.cs" />
